Add new microservices code, test classes, docs and configurations