@@ -33,6 +33,19 @@
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <springdoc.version>2.3.0</springdoc.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <jacoco.version>0.8.14</jacoco.version>
+        <sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
+        <sonar.projectKey>digital-wallet-system</sonar.projectKey>
+        <sonar.projectName>Digital Wallet System</sonar.projectName>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${maven.multiModuleProjectDirectory}/auth-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/user-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/wallet-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/transaction-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/rewards-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/notification-service/target/site/jacoco/jacoco.xml,
+            ${maven.multiModuleProjectDirectory}/admin-service/target/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencyManagement>
@@ -60,6 +73,38 @@
                 <configuration>
                     <release>17</release>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
